logs/hwtlib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/hwt'...
Listing './lib/python3.5/site-packages/hwt/hdl'...
Listing './lib/python3.5/site-packages/hwt/hdl/types'...
Listing './lib/python3.5/site-packages/hwt/interfaces'...
Listing './lib/python3.5/site-packages/hwt/interfaces/agents'...
Listing './lib/python3.5/site-packages/hwt/pyUtils'...
Listing './lib/python3.5/site-packages/hwt/serializer'...
Listing './lib/python3.5/site-packages/hwt/serializer/generic'...
Listing './lib/python3.5/site-packages/hwt/serializer/hwt'...
Listing './lib/python3.5/site-packages/hwt/serializer/hwt/templates'...
Listing './lib/python3.5/site-packages/hwt/serializer/ip_packager'...
Listing './lib/python3.5/site-packages/hwt/serializer/ip_packager/interfaces'...
Listing './lib/python3.5/site-packages/hwt/serializer/resourceAnalyzer'...
Listing './lib/python3.5/site-packages/hwt/serializer/simModel'...
Listing './lib/python3.5/site-packages/hwt/serializer/simModel/templates'...
Listing './lib/python3.5/site-packages/hwt/serializer/systemC'...
Listing './lib/python3.5/site-packages/hwt/serializer/systemC/templates'...
Listing './lib/python3.5/site-packages/hwt/serializer/verilog'...
Listing './lib/python3.5/site-packages/hwt/serializer/verilog/templates'...
Listing './lib/python3.5/site-packages/hwt/serializer/vhdl'...
Listing './lib/python3.5/site-packages/hwt/serializer/vhdl/templates'...
Listing './lib/python3.5/site-packages/hwt/simulator'...
Listing './lib/python3.5/site-packages/hwt/simulator/types'...
Listing './lib/python3.5/site-packages/hwt/synthesizer'...
Listing './lib/python3.5/site-packages/hwt/synthesizer/interfaceLevel'...
Listing './lib/python3.5/site-packages/hwt/synthesizer/interfaceLevel/interfaceUtils'...
Listing './lib/python3.5/site-packages/hwt/synthesizer/rtlLevel'...
Listing './lib/python3.5/site-packages/hwt/synthesizer/rtlLevel/signalUtils'...
Listing './lib/python3.5/site-packages/hwt-2.1.egg-info'...
Listing './lib/python3.5/site-packages/hwtLib'...
Listing './lib/python3.5/site-packages/hwtLib/abstract'...
Listing './lib/python3.5/site-packages/hwtLib/amba'...
Listing './lib/python3.5/site-packages/hwtLib/amba/axiLite_comp'...
Listing './lib/python3.5/site-packages/hwtLib/amba/axis_comp'...
Listing './lib/python3.5/site-packages/hwtLib/amba/interconnect'...
Listing './lib/python3.5/site-packages/hwtLib/amba/sim'...
Listing './lib/python3.5/site-packages/hwtLib/clocking'...
Listing './lib/python3.5/site-packages/hwtLib/handshaked'...
Listing './lib/python3.5/site-packages/hwtLib/i2c'...
Listing './lib/python3.5/site-packages/hwtLib/img'...
Listing './lib/python3.5/site-packages/hwtLib/interfaces'...
Listing './lib/python3.5/site-packages/hwtLib/ipif'...
Listing './lib/python3.5/site-packages/hwtLib/logic'...
Listing './lib/python3.5/site-packages/hwtLib/mem'...
Listing './lib/python3.5/site-packages/hwtLib/mem/atomic'...
Listing './lib/python3.5/site-packages/hwtLib/samples'...
Listing './lib/python3.5/site-packages/hwtLib/samples/arithmetic'...
Listing './lib/python3.5/site-packages/hwtLib/samples/axi'...
Listing './lib/python3.5/site-packages/hwtLib/samples/builders'...
Listing './lib/python3.5/site-packages/hwtLib/samples/errors'...
Listing './lib/python3.5/site-packages/hwtLib/samples/hierarchy'...
Listing './lib/python3.5/site-packages/hwtLib/samples/intfArray'...
Listing './lib/python3.5/site-packages/hwtLib/samples/mem'...
Listing './lib/python3.5/site-packages/hwtLib/samples/operators'...
Listing './lib/python3.5/site-packages/hwtLib/samples/rtlLvl'...
Listing './lib/python3.5/site-packages/hwtLib/samples/rtlLvl/arithmetic'...
Listing './lib/python3.5/site-packages/hwtLib/samples/statements'...
Listing './lib/python3.5/site-packages/hwtLib/sim'...
Listing './lib/python3.5/site-packages/hwtLib/spi'...
Listing './lib/python3.5/site-packages/hwtLib/structManipulators'...
Listing './lib/python3.5/site-packages/hwtLib/tests'...
Listing './lib/python3.5/site-packages/hwtLib/tests/synthesizer'...
Listing './lib/python3.5/site-packages/hwtLib/tests/synthesizer/interfaceLevel'...
Listing './lib/python3.5/site-packages/hwtLib/tests/synthesizer/rtlLevel'...
Listing './lib/python3.5/site-packages/hwtLib/tests/types'...
Listing './lib/python3.5/site-packages/hwtLib/types'...
Listing './lib/python3.5/site-packages/hwtLib/types/net'...
Listing './lib/python3.5/site-packages/hwtLib/uart'...
Listing './lib/python3.5/site-packages/hwtLib-2.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simpy'...
Listing './lib/python3.5/site-packages/simpy/resources'...
Listing './lib/python3.5/site-packages/simpy-3.0.10.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
